--- a/app/src/main/res/layout/layout_code_editor.xml
+++ b/app/src/main/res/layout/layout_code_editor.xml
@@ -4,7 +4,7 @@
   android:layout_height="match_parent"
   android:orientation="vertical">
 
-  <com.itsaky.androidide.views.editor.IDEEditor
+  <com.itsaky.androidide.ui.editor.IDEEditor
     android:id="@+id/editor"
     android:layout_width="match_parent"
     android:layout_height="0dp"
