--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -10,7 +10,7 @@
     android:id="@+id/icon_anchor"
     android:layout_width="0dp"
     android:layout_height="200dp"
-    android:background="?attr/background"
+    android:background="?android:attr/colorBackground"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
