--- a/uidesigner/src/main/res/layout/layout_ui_widgets_item.xml
+++ b/uidesigner/src/main/res/layout/layout_ui_widgets_item.xml
@@ -23,6 +23,7 @@
   android:layout_marginTop="2dp"
   android:layout_marginBottom="2dp"
   android:clickable="true"
+  tools:background="?android:colorBackground"
   android:descendantFocusability="blocksDescendants"
   android:elevation="0.7dp"
   android:focusable="true"
@@ -36,7 +37,9 @@
     android:layout_width="20dp"
     android:layout_height="20dp"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toTopOf="parent"
+    app:tint="?attr/colorOnBackground"
+    tools:src="@drawable/ic_widget_imageview" />
 
   <TextView
     android:id="@+id/name"
@@ -45,6 +48,7 @@
     android:layout_marginStart="8dp"
     android:maxLines="1"
     android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+    android:textColor="?attr/colorOnBackground"
     tools:text="Button" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
