--- a/uidesigner/src/main/res/layout/layout_view_info_sheet.xml
+++ b/uidesigner/src/main/res/layout/layout_view_info_sheet.xml
@@ -19,8 +19,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:background="@color/content_background">
+  android:layout_height="match_parent">
 
   <ViewFlipper
     android:id="@+id/flipper"
