--- a/app/src/main/res/layout/fragment_wizard.xml
+++ b/app/src/main/res/layout/fragment_wizard.xml
@@ -1,60 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/setup_wizard_layout"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/setup_wizard_layout"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:background="?attr/colorSurface"
+  android:orientation="vertical"
+  android:paddingStart="16dp"
+  android:paddingEnd="16dp"
+  tools:ignore="Overdraw">
+
+  <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
-    android:orientation="vertical"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    tools:ignore="Overdraw">
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:fillViewport="true">
 
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      android:paddingTop="16dp"
+      android:paddingBottom="16dp">
+
+      <TextView
+        android:id="@+id/wizard_description_id"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="2dp"
+        android:text="@string/new_project"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp">
+      <include
+        android:id="@+id/wizard_templates_layout"
+        layout="@layout/wizard_templates"
+        android:visibility="visible" />
 
-            <TextView
-                android:id="@+id/wizard_description_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="16dp"
-                android:paddingTop="16dp"
-                android:paddingBottom="2dp"
-                android:text="@string/new_project"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+      <include
+        android:id="@+id/wizard_details_layout"
+        layout="@layout/wizard_details"
+        android:visibility="gone" />
 
-            <include
-                android:id="@+id/wizard_templates_layout"
-                layout="@layout/wizard_templates"
-                android:visibility="visible" />
+      <include
+        android:id="@+id/loading_layout"
+        layout="@layout/layout_loading_wizard"
+        android:visibility="gone" />
+    </LinearLayout>
+  </androidx.core.widget.NestedScrollView>
 
-            <include
-                android:id="@+id/wizard_details_layout"
-                layout="@layout/wizard_details"
-                android:visibility="gone" />
-
-            <include
-                android:id="@+id/loading_layout"
-                layout="@layout/layout_loading_wizard"
-                android:visibility="gone" />
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-
-    <include
-        android:id="@+id/footer_layout"
-        layout="@layout/setup_footer" />
+  <include
+    android:id="@+id/footer_layout"
+    layout="@layout/setup_footer" />
 
 </LinearLayout>
