--- a/common/src/main/res/layout/layout_nav_header.xml
+++ b/common/src/main/res/layout/layout_nav_header.xml
@@ -4,7 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="200dp"
-  android:background="?attr/colorPrimaryContainer"
+  android:background="?attr/colorSurface"
   tools:ignore="Overdraw">
 
   <com.google.android.material.imageview.ShapeableImageView
@@ -14,8 +14,9 @@
     android:layout_centerVertical="true"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
-    android:src="@drawable/ic_launcher_main"
-    app:shapeAppearance="@style/AppTheme.ShapeAppearance.MainFragment.Logo" />
+    android:src="@drawable/ic_launcher_fg_vector"
+    app:shapeAppearance="@style/AppTheme.ShapeAppearance.MainFragment.Logo"
+    app:tint="?attr/colorOnSurface" />
 
   <TextView
     android:id="@+id/title"
@@ -25,7 +26,7 @@
     android:layout_toEndOf="@id/icon"
     android:elevation="8dp"
     android:text="@string/app_name"
-    android:textColor="?attr/colorOnPrimaryContainer"
+    android:textColor="?attr/colorOnSurface"
     android:textSize="20sp"
     android:textStyle="bold" />
 
