--- a/editor/src/main/res/layout/layout_completion_item.xml
+++ b/editor/src/main/res/layout/layout_completion_item.xml
@@ -74,7 +74,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@+id/completion_iconText"
     app:layout_constraintTop_toBottomOf="@id/completion_label"
-    tools:text="com.itsaky.androidide.MainActivity" />
+    tools:text="com.itsaky.androidide.activities.MainActivity" />
 
 
   <TextView
