fix: lag when run tasks dialog is opened
This removes the categories option in run tasks dialog (closes #584)

--- a/app/src/main/res/layout/layout_run_task_item.xml
+++ b/app/src/main/res/layout/layout_run_task_item.xml
@@ -20,6 +20,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
+  android:background="@drawable/bg_ripple"
   android:clickable="true"
   android:descendantFocusability="blocksDescendants"
   android:focusable="true">
@@ -29,6 +30,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:checked="true"
+    android:clickable="false"
+    android:focusable="false"
     android:gravity="center_vertical"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
