--- a/app/src/main/res/layout/layout_run_task.xml
+++ b/app/src/main/res/layout/layout_run_task.xml
@@ -37,7 +37,7 @@
   </com.google.android.material.textfield.TextInputLayout>
 
   <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/categories"
+    android:id="@+id/tasks"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -45,6 +45,6 @@
     android:layout_marginEnd="16dp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:itemCount="3"
-    tools:listitem="@layout/layout_run_tasks_category" />
+    tools:listitem="@layout/layout_run_task_item" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
