--- a/resources/src/main/res/values/styles.xml
+++ b/resources/src/main/res/values/styles.xml
@@ -16,33 +16,40 @@
   -->
 
   <style name="Theme.AndroidIDE.Material" parent="Theme.Material3.Light.NoActionBar">
-    <item name="colorPrimary">@color/md_theme_light_primary</item>
-    <item name="colorPrimaryDark">@color/md_theme_light_background</item>
-    <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
-    <item name="colorPrimaryContainer">@color/md_theme_light_primaryContainer</item>
-    <item name="colorOnPrimaryContainer">@color/md_theme_light_onPrimaryContainer</item>
-    <item name="colorSecondary">@color/md_theme_light_secondary</item>
-    <item name="colorOnSecondary">@color/md_theme_light_onSecondary</item>
-    <item name="colorSecondaryContainer">@color/md_theme_light_secondaryContainer</item>
-    <item name="colorOnSecondaryContainer">@color/md_theme_light_onSecondaryContainer</item>
-    <item name="colorTertiary">@color/md_theme_light_tertiary</item>
-    <item name="colorOnTertiary">@color/md_theme_light_onTertiary</item>
-    <item name="colorTertiaryContainer">@color/md_theme_light_tertiaryContainer</item>
-    <item name="colorOnTertiaryContainer">@color/md_theme_light_onTertiaryContainer</item>
-    <item name="colorError">@color/md_theme_light_error</item>
-    <item name="colorErrorContainer">@color/md_theme_light_errorContainer</item>
-    <item name="colorOnError">@color/md_theme_light_onError</item>
-    <item name="colorOnErrorContainer">@color/md_theme_light_onErrorContainer</item>
-    <item name="android:colorBackground">@color/md_theme_light_background</item>
-    <item name="colorOnBackground">@color/md_theme_light_onBackground</item>
-    <item name="colorSurface">@color/md_theme_light_surface</item>
-    <item name="colorOnSurface">@color/md_theme_light_onSurface</item>
-    <item name="colorSurfaceVariant">@color/md_theme_light_surfaceVariant</item>
-    <item name="colorOnSurfaceVariant">@color/md_theme_light_onSurfaceVariant</item>
-    <item name="colorOutline">@color/md_theme_light_outline</item>
-    <item name="colorOnSurfaceInverse">@color/md_theme_light_inverseOnSurface</item>
-    <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
-    <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
+    <item name="colorPrimary">@color/light_colorPrimary</item>
+    <item name="colorPrimaryContainer">@color/light_colorPrimaryContainer</item>
+    <item name="colorPrimaryDark">@color/light_colorPrimaryDark</item>
+    <item name="colorPrimaryInverse">@color/light_colorPrimaryInverse</item>
+
+    <item name="colorOnPrimary">@color/light_colorOnPrimary</item>
+    <item name="colorOnPrimaryContainer">@color/light_colorOnPrimaryContainer</item>
+
+    <item name="colorSecondary">@color/light_colorSecondary</item>
+    <item name="colorSecondaryContainer">@color/light_colorSecondaryContainer</item>
+    <item name="colorOnSecondary">@color/light_colorOnSecondary</item>
+    <item name="colorOnSecondaryContainer">@color/light_colorOnSecondaryContainer</item>
+
+    <item name="colorTertiary">@color/light_colorTertiary</item>
+    <item name="colorTertiaryContainer">@color/light_colorTertiaryContainer</item>
+    <item name="colorOnTertiary">@color/light_colorOnTertiary</item>
+    <item name="colorOnTertiaryContainer">@color/light_colorOnTertiaryContainer</item>
+
+    <item name="colorError">@color/light_colorError</item>
+    <item name="colorErrorContainer">@color/light_colorErrorContainer</item>
+    <item name="colorOnError">@color/light_colorOnError</item>
+    <item name="colorOnErrorContainer">@color/light_colorOnErrorContainer</item>
+
+    <item name="android:colorBackground">@color/light_colorBackground</item>
+    <item name="colorOnBackground">@color/light_colorOnBackground</item>
+
+    <item name="colorSurface">@color/light_colorSurface</item>
+    <item name="colorSurfaceInverse">@color/light_colorSurfaceInverse</item>
+    <item name="colorSurfaceVariant">@color/light_colorSurfaceVariant</item>
+    <item name="colorOnSurface">@color/light_colorOnSurface</item>
+    <item name="colorOnSurfaceInverse">@color/light_colorOnSurfaceInverse</item>
+    <item name="colorOnSurfaceVariant">@color/light_colorOnSurfaceVariant</item>
+
+    <item name="colorOutline">@color/light_colorOutline</item>
   </style>
 
   <style name="Theme.AndroidIDE.Base" parent="Theme.AndroidIDE.Material">
@@ -69,7 +76,7 @@
   </style>
 
   <style name="AppTheme.Splash" parent="Theme.SplashScreen">
-    <item name="windowSplashScreenBackground">@color/md_theme_light_background</item>
+    <item name="windowSplashScreenBackground">@color/light_colorSurface</item>
     <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_animated</item>
     <item name="windowSplashScreenAnimationDuration">200</item>
     <item name="postSplashScreenTheme">@style/Theme.AndroidIDE</item>
