--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -21,16 +21,11 @@
 
   </com.google.android.material.appbar.AppBarLayout>
 
-  <LinearLayout
+
+  <FrameLayout
+    android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-    <FrameLayout
-      android:id="@+id/fragmentContainer"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent" />
-
-  </LinearLayout>
+    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
