--- a/app/src/main/res/menu/menu_editor_nav.xml
+++ b/app/src/main/res/menu/menu_editor_nav.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/editornav_terminal"
             android:icon="@drawable/ic_terminal"
-            android:title="@string/btn_terminal" />
+            android:title="@string/title_terminal" />
         <item
             android:id="@+id/editornav_close_project"
             android:icon="@drawable/ic_close"
