fix: layout hierarchy view is not scrollable

--- a/uidesigner/src/main/res/layout/activity_ui_designer.xml
+++ b/uidesigner/src/main/res/layout/activity_ui_designer.xml
@@ -74,11 +74,25 @@
     android:layout_height="match_parent"
     android:layout_gravity="end">
 
-    <com.itsaky.androidide.uidesigner.views.LayoutHierarchyView
-      android:id="@+id/hierarchy"
+    <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:padding="16dp" />
+      android:fillViewport="true">
+
+      <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <com.itsaky.androidide.uidesigner.views.LayoutHierarchyView
+          android:id="@+id/hierarchy"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:padding="16dp" />
+
+      </HorizontalScrollView>
+
+    </androidx.core.widget.NestedScrollView>
 
   </com.google.android.material.navigation.NavigationView>
 
