--- a/app/src/main/res/xml/ide_file_provider_paths.xml
+++ b/app/src/main/res/xml/ide_file_provider_paths.xml
@@ -14,9 +14,11 @@
   ~  You should have received a copy of the GNU General Public License
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
-
 <paths>
-  <external-path
-    name="external_path"
-    path="."/>
+  <root-path name="root" path="." />
+  <external-path name="external" path="." />
+  <external-files-path name="external_files" path="." />
+  <cache-path name="cache" path="." />
+  <external-cache-path name="external_cache" path="." />
+  <files-path name="files" path="." />
 </paths>
