fix: completions items without 'detail' are not clickable

--- a/editor/src/main/res/layout/layout_completion_item.xml
+++ b/editor/src/main/res/layout/layout_completion_item.xml
@@ -24,6 +24,7 @@
   android:layout_height="wrap_content"
   android:background="?attr/colorPrimaryContainer"
   android:gravity="center_vertical"
+  android:minHeight="40dp"
   tools:ignore="SmallSp">
 
   <TextView
