--- a/app/src/main/res/layout/wizard_templates.xml
+++ b/app/src/main/res/layout/wizard_templates.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
@@ -8,5 +9,9 @@
     android:id="@+id/template_recyclerview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:listitem="@layout/wizard_template_item" />
+    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+    tools:itemCount="10"
+    tools:listitem="@layout/layout_template_list_item"
+    tools:spanCount="3" />
+
 </FrameLayout>
