--- a/app/src/main/res/layout/fragment_template_details.xml
+++ b/app/src/main/res/layout/fragment_template_details.xml
@@ -21,6 +21,16 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
+  <com.google.android.material.progressindicator.LinearProgressIndicator
+    android:id="@+id/progress"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:indeterminate="true"
+    android:visibility="gone"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
   <com.google.android.material.textview.MaterialTextView
     android:id="@+id/title"
     android:layout_width="wrap_content"
@@ -29,7 +39,7 @@
     android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
     android:transitionName="templateName"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/progress"
     tools:text="@string/new_project" />
 
   <androidx.recyclerview.widget.RecyclerView
@@ -45,7 +55,7 @@
 
   <com.google.android.material.button.MaterialButton
     android:id="@+id/previous"
-    style="@style/Widget.Material3.Button.TextButton"
+    style="@style/Widget.Material3.Button.OutlinedButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
