feat(logsender): run LogSender as a service to avoid termination

--- a/logsender-sample/src/main/res/layout/activity_main.xml
+++ b/logsender-sample/src/main/res/layout/activity_main.xml
@@ -21,11 +21,32 @@
   android:layout_height="match_parent"
   android:fitsSystemWindows="true"
   android:gravity="center"
+  android:orientation="vertical"
   tools:context=".MainActivity">
 
   <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!" />
+    android:text="Click the buttons below to test different cases." />
+
+  <Button
+    android:id="@+id/log_overflow"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="8dp"
+    android:text="Log 100K lines" />
+
+  <Button
+    android:id="@+id/exception"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="8dp"
+    android:text="throw RuntimeException" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
