--- a/logsender-sample/src/main/res/values-night/themes.xml
+++ b/logsender-sample/src/main/res/values-night/themes.xml
@@ -17,7 +17,7 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
   <!-- Base application theme. -->
-  <style name="Base.Theme.AndroidIDE" parent="Theme.Material3.DayNight.NoActionBar">
+  <style name="Base.Theme.AndroidIDE" parent="Theme.Material3.DayNight">
     <!-- Customize your dark theme here. -->
     <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
   </style>
